--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,33 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Mobile devices */
+@media (max-width: 600px) {
+  .container {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+/* Tablets and up */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .container {
+    width: 80%;
+    padding: 20px;
+  }
+}
+
+/* Desktops and up */
+@media (min-width: 1025px) {
+  .container {
+    width: 60%;
+    padding: 30px;
+  }
+}
+
+
+
+
 
 body {
   background: rgb(255, 255, 255);
@@ -44,9 +71,6 @@ body {
   color: #a136ff;
 
 }
-
-
-
 
 
 .about {
